--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Roboto&display=swap" rel="stylesheet"> 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
@@ -142,7 +143,7 @@
                     </div>
                 </div>
             </div>
-                <div class="container">
+        <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
                 <ul>
@@ -161,7 +162,7 @@
 
         <div class="row">
             <div class="col-sm-12 text-center">
-                <p><span class="d-block">Copyright 2017</span> Made in Yorkshire.</p>
+                <p><span class="d-block text-uppercase">Copyright 2017</span> Made in Yorkshire.</p>
             </div>
         </div>
 
